--- a/Java/src/main/resources/application.properties
+++ b/Java/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=employees
+
+spring.datasource.url=jdbc:mysql://localhost:3306/employees?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=user
+spring.datasource.password=password
+
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto= update
